@@ -11,7 +11,7 @@
 AUTOMAKE_OPTIONS = no-dependencies dist-shar dist-zip
 EXTRA_DIST = autogen.sh README* *.pc.in *.spec.in *.spec *-config.in \
 	ucommon-config.1 Doxyfile cmodel.sh BUILDS SUPPORT COPYING* \
-	COPYRIGHT CMakeLists.txt config.h.cmake
+	COPYRIGHT CMakeLists.txt config.h.cmake doxy.config.cmake
 
 DIST_SUBDIRS = common script audio openssl gnutls insecure utils inc test
 SUBDIRS = common @UCOMMON_COMPONENTS@ inc test
